--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^8.5"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.91",
         "phpunit/phpunit": "^11.0"
     },
     "autoload": {
